# vsm-agent-swarm

./: .gitignore  README.md  plugin.json  pyproject.toml  requirements.txt
agents/: system2-coordination.md  system3-audit.md  system3-control.md  system4-strategy.md  system5-policy.md
agents/system1/: backend.md  code-writer.md  database.md  documenter.md  frontend.md  generalist-coder.md  infrastructure.md  reviewer.md  tester.md
commands/: vsm.md
docs/: ARCHITECTURE.md  ORCHESTRATOR.md  USER_GUIDE.md
hooks/: hooks.json  log_action.py  log_system_agent.py  session_complete.py  update_metrics.py
orchestrator/: __init__.py  __main__.py  adaptation.py  complexity_analyzer.py  execution_log.py  main.py  state_manager.py  vsm_loop.py
skills/: vsm-orchestrate.md
