[project]
name = "vsm-orchestrator"
version = "1.0.0"
description = "Viable Systems Model multi-agent orchestration for development tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["vsm", "multi-agent", "orchestration", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
vsm-orchestrator = "orchestrator.main:main"

[project.urls]
Homepage = "https://github.com/dtrouton/vsm-agent-swarm"
Repository = "https://github.com/dtrouton/vsm-agent-swarm"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
